Add external templates in Go Plugin; Add memory options; Merge stderr+stdout in err response
